  Export->Export As..., that pops up a dialog allowing one to
  choose the export format, as well as the destination pathname.
  Also, it is available via the mini-buffer (or the -x switch)
  through a proper new LFUN (see below).

The Advanced Find and Replace feature now supports cancel of a long
search operation by hitting the ESC key.

The following pref variables were changed in 2.0:

The following pref variables are obsoleted in 2.0:

- \\default_papersize

The following new LyX functions have been introduced:

- LFUN_BUFFER_EXPORT_AS <format> <filename>
  Equivalent to the new -export-to command-line switch (see above).

- LFUN_CLIPBOARD_PASTE_SIMPLE ("clipboard-paste-simple")
  Paste the clipboard contents as simple unformatted text.
  This is also available through a new menu voice within the
  [Edit]->[Paste Special...] sub-menu.


The following LyX functions have been removed:

//template, remove this entry later on
- LFUN_NEXT_INSET_TOGGLE ("next-inset-toggle"): use "inset-toggle" instead.


The following LyX functions have been changed:

//template, remove this entry later on
- LFUN_INSET_TOGGLE ("inset-toggle"): For some insets, this function was used 
  to show the settings dialog. This is no longer possible and one should use
  inset-settings for this purpose.
 

The following LyX key bindings have been changed:

//template, remove this entry later on
- LFUN_MATH_MACRO_FOLD ("math-macro-fold")
  The binding to "C-minus" has changed to "C-S-underscore".


Linux desktop file specification and scalable icon has been included
into the tarball.


New external programs and libraries:
------------------------------------

- LyX links now against libmagic (http://www.darwinsys.com/file/) if it is
  available at compile time. This improves the file format detection of
  included graphics and other files. The old builtin format detection code
  is used if libmagic is not available.


Known issues in version 2.1.0
-----------------------------
