@@ -25,10 +25,11 @@ options have been added:
 The Advanced Find and Replace feature now supports cancel of a long
 search operation by hitting the ESC key.
 
-The following pref variables were changed in 2.0:
+The following pref variables were changed in 2.1:
 
-The following pref variables are obsoleted in 2.0:
+The following pref variables are obsoleted in 2.1:
 
+- \\default_language
 - \\default_papersize
 
 The following new LyX functions have been introduced:
